--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -9,73 +9,57 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      # where Buildozer will install the SDK
+      ANDROID_SDK_ROOT: ${{ runner.home }}/.buildozer/android/platform/android-sdk
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
+      - name: Set up Java 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: temurin
+          java-version: '17'
 
-    - name: Install dependencies
-      run: |
-        sudo apt update
-        sudo apt install -y \
-          build-essential \
-          ccache \
-          git \
-          zip \
-          unzip \
-          openjdk-17-jdk \
-          libffi-dev \
-          libssl-dev \
-          libncurses-dev \
-          libncurses5-dev \
-          libsqlite3-dev \
-          libjpeg-dev \
-          zlib1g-dev \
-          libgl1-mesa-dev \
-          libbz2-dev \
-          libgdbm-dev \
-          liblzma-dev \
-          libncursesw5-dev \
-          libreadline-dev \
-          libtool \
-          automake \
-          autoconf \
-          m4 \
-          cmake
+      - name: Set up Python 3.10
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-    - name: Set up Java & Python
-      run: |
-          sudo apt update
-          sudo apt install -y openjdk-17-jdk zip unzip
-      uses: actions/setup-python@v4
-      with: python-version: 3.10
+      - name: Install system packages
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            build-essential ccache git zip unzip \
+            libffi-dev libssl-dev libncurses-dev libncurses5-dev \
+            libsqlite3-dev libjpeg-dev zlib1g-dev libgl1-mesa-dev \
+            libbz2-dev libgdbm-dev liblzma-dev libncursesw5-dev \
+            libreadline-dev libtool automake autoconf m4 cmake
 
-    - name: Install Buildozer and prerequisites
-      run: |
-          pip install --upgrade pip
-          pip install buildozer cython
+      - name: Install Buildozer & Cython
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install buildozer cython
 
-    - name: Install Android SDK Build‑Tools & accept licenses
-      env:
-        ANDROID_SDK_ROOT: ~/.buildozer/android/platform/android-sdk
-      run: |
-        yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" \
+      - name: Install Android SDK tools & accept licenses
+        # `sdkmanager` comes bundled with the "cmdline-tools"
+        run: |
+          yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --install \
+            "cmdline-tools;latest" \
             "platform-tools" \
             "platforms;android-31" \
-            "build-tools;36.0.0" \
-            "tools"
+            "build-tools;36.0.0"
+          yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --licenses
 
-    - name: Build APK
-      working-directory: src    # where your buildozer.spec lives
-      run: buildozer --verbose android debug
+      - name: Build debug APK
+        working-directory: src   # adjust if your buildozer.spec isn’t in src/
+        run: buildozer --verbose android debug
 
-    - name: Upload APK
-      uses: actions/upload-artifact@v4
-      with:
-        name: LifeTime-App-APK
-        path: src/bin/*.apk
+      - name: Upload APK artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: LifeTime-App-APK
+          path: |
+            src/bin/*.apk     # adjust if your APK lands somewhere else
