--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -9,73 +9,79 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      ANDROID_SDK_ROOT: $HOME/.buildozer/android/platform/android-sdk
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Java 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: temurin
-          java-version: '17'
-
-      - name: Set up Python 3.10
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      - name: Install system packages
+      - name: Install system dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y \
-            build-essential ccache git zip unzip \
-            libffi-dev libssl-dev libncurses-dev libncurses5-dev \
-            libsqlite3-dev libjpeg-dev zlib1g-dev libgl1-mesa-dev \
-            libbz2-dev libgdbm-dev liblzma-dev libncursesw5-dev \
-            libreadline-dev libtool automake autoconf m4 cmake
+            build-essential \
+            ccache \
+            git \
+            zip \
+            unzip \
+            openjdk-17-jdk \
+            libffi-dev \
+            libssl-dev \
+            libsqlite3-dev \
+            libjpeg-dev \
+            zlib1g-dev \
+            libgl1-mesa-dev \
+            libbz2-dev \
+            libgdbm-dev \
+            liblzma-dev \
+            libncurses-dev \
+            libncursesw5-dev \
+            libreadline-dev \
+            libtool \
+            automake \
+            autoconf \
+            m4 \
+            cmake \
+            wget
 
       - name: Install Buildozer & Cython
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install buildozer cython
+          pip install --upgrade pip
+          pip install buildozer cython
 
-      - name: Install Android SDK cmdline-tools & accept licenses
+      - name: Install Android SDK cmdline‑tools & accept licenses
         env:
-          ANDROID_SDK_ROOT: ${{ runner.home }}/.buildozer/android/platform/android-sdk
+          ANDROID_SDK_ROOT: $HOME/.buildozer/android/platform/android-sdk
         run: |
-          sudo apt-get update
-          sudo apt-get install -y unzip wget
-
-          # Create the SDK root and download Google's cmdline-tools
+          # Download & unzip Google cmdline-tools under $ANDROID_SDK_ROOT
           mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools"
           pushd "$ANDROID_SDK_ROOT/cmdline-tools"
           wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
           unzip cmdline-tools.zip
           rm cmdline-tools.zip
-          # The zip unpacks into a folder named 'cmdline-tools'; rename it to 'latest'
           mv cmdline-tools latest
           popd
 
           # Make sdkmanager available
           export PATH="$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH"
 
-          # Install and accept everything we need
+          # Install platform-tools, SDK, build-tools and accept all licenses
           yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --install \
             "platform-tools" \
             "platforms;android-31" \
             "build-tools;36.0.0"
           yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --licenses
 
-
-      - name: Build debug APK
-        working-directory: src   # adjust if your buildozer.spec is elsewhere
+      - name: Build APK
+        working-directory: src    # adjust if your buildozer.spec lives elsewhere
         run: buildozer --verbose android debug
 
-      - name: Upload APK artifact
+      - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: LifeTime-App-APK
-          path: src/bin/*.apk
+          path: src/bin/*.apk     # adjust path if needed
