--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -57,19 +57,23 @@ jobs:
         env:
           ANDROID_SDK_ROOT: $HOME/.buildozer/android/platform/android-sdk
         run: |
-          # Download & unzip Google cmdline-tools under $ANDROID_SDK_ROOT
+          # Prepare SDK root structure
           mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools"
           pushd "$ANDROID_SDK_ROOT/cmdline-tools"
+
+          # Download and unpack the latest cmdline-tools
           wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
           unzip cmdline-tools.zip
           rm cmdline-tools.zip
+
+          # Move into "latest" subfolder so sdkmanager finds its own classes
           mv cmdline-tools latest
           popd
 
-          # Make sdkmanager available
+          # Put sdkmanager on PATH
           export PATH="$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH"
 
-          # Install platform-tools, SDK, build-tools and accept all licenses
+          # Install essential packages and accept licenses
           yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --install \
             "platform-tools" \
             "platforms;android-31" \
