--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Python
+      - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
@@ -23,67 +23,50 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y \
-            build-essential \
-            ccache \
-            git \
-            zip \
-            unzip \
+            build-essential git zip unzip wget \
             openjdk-17-jdk \
-            libffi-dev \
-            libssl-dev \
-            libsqlite3-dev \
-            libjpeg-dev \
-            zlib1g-dev \
-            libgl1-mesa-dev \
-            libbz2-dev \
-            libgdbm-dev \
-            liblzma-dev \
-            libncurses-dev \
-            libncursesw5-dev \
-            libreadline-dev \
-            libtool \
-            automake \
-            autoconf \
-            m4 \
-            cmake \
-            wget
+            libffi-dev libssl-dev \
+            libsqlite3-dev libjpeg-dev zlib1g-dev \
+            libgl1-mesa-dev libbz2-dev libgdbm-dev liblzma-dev \
+            libncurses-dev libncursesw5-dev libreadline-dev \
+            libtool automake autoconf m4 cmake ccache
 
       - name: Install Buildozer & Cython
         run: |
           pip install --upgrade pip
           pip install buildozer cython
 
-      - name: Install Android SDK cmdline‑tools & accept licenses
+      - name: Install Android CLI tools & accept licenses
         env:
-          ANDROID_SDK_ROOT: $HOME/.buildozer/android/platform/android-sdk
+          ANDROID_SDK_ROOT: ${{ runner.home }}/.buildozer/android/platform/android-sdk
         run: |
-          # make sure sdk root exists
-          mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools"
-
-          # download then unpack straight into cmdline-tools/tools
+          # 1. Download & unpack the command‑line tools into cmdline-tools/latest
+          mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools/latest"
           wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip \
-               -O /tmp/cmdline-tools.zip
+            -O cmdline-tools.zip
+          unzip -q cmdline-tools.zip -d "$ANDROID_SDK_ROOT/cmdline-tools/latest"
+          rm cmdline-tools.zip
 
-          unzip /tmp/cmdline-tools.zip -d "$ANDROID_SDK_ROOT/cmdline-tools/tools"
-          rm /tmp/cmdline-tools.zip
+          # 2. Add sdkmanager and platform-tools to PATH
+          echo "export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:\$PATH" >> $GITHUB_ENV
 
-          # add sdkmanager into our PATH
-          export PATH="$ANDROID_SDK_ROOT/cmdline-tools/tools/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH"
-
-          # now install platform‑tools, sdk, build‑tools & accept licenses
+          # 3. Install required SDK components
           yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" \
             "platform-tools" \
             "platforms;android-31" \
             "build-tools;36.0.0"
+
+          # 4. Accept all licenses
           yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --licenses
 
+      - name: Build APK with Buildozer
+        working-directory: src   # adjust if your buildozer.spec isn’t in src/
+        run: |
+          # now buildozer can find sdkmanager & java
+          buildozer --verbose android debug
 
-      - name: Build APK
-        working-directory: src    # adjust if your buildozer.spec lives elsewhere
-        run: buildozer --verbose android debug
-
-      - name: Upload APK
+      - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: LifeTime-App-APK
-          path: src/bin/*.apk     # adjust path if needed
+          path: src/bin/*.apk
