--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -11,59 +11,59 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Set up Python 3.10
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      - name: Install system dependencies
+      - name: Install system deps
         run: |
           sudo apt-get update
           sudo apt-get install -y \
-            build-essential git zip unzip wget \
-            openjdk-17-jdk \
-            libffi-dev libssl-dev \
-            libsqlite3-dev libjpeg-dev zlib1g-dev \
+            build-essential ccache git zip unzip wget openjdk-17-jdk \
+            libffi-dev libssl-dev libsqlite3-dev libjpeg-dev zlib1g-dev \
             libgl1-mesa-dev libbz2-dev libgdbm-dev liblzma-dev \
             libncurses-dev libncursesw5-dev libreadline-dev \
-            libtool automake autoconf m4 cmake ccache
+            libtool automake autoconf m4 cmake
 
       - name: Install Buildozer & Cython
         run: |
           pip install --upgrade pip
           pip install buildozer cython
 
-      - name: Install Android CLI tools & accept licenses
+      - name: Install Android SDK CLI tools & accept licenses
         env:
           ANDROID_SDK_ROOT: $HOME/.buildozer/android/platform/android-sdk
         run: |
+          # 1) Download Google's command‑line tools bundle:
           mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools"
-          # unpack into a temp dir
+          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip \
+            -O cmdline-tools.zip
+
+          # 2) Unzip into "cmdline-tools" and rename the nested folder to "latest":
           unzip -q cmdline-tools.zip -d "$ANDROID_SDK_ROOT/cmdline-tools"
-          # move into "latest" so sdkmanager lives in .../cmdline-tools/latest/bin
-          mv "$ANDROID_SDK_ROOT/cmdline-tools/cmdline-tools" "$ANDROID_SDK_ROOT/cmdline-tools/latest"
+          mv "$ANDROID_SDK_ROOT/cmdline-tools/cmdline-tools" \
+             "$ANDROID_SDK_ROOT/cmdline-tools/latest"
           rm cmdline-tools.zip
 
-          # expose sdkmanager in PATH
-          echo "PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:\$PATH" >> $GITHUB_ENV
+          # 3) Expose sdkmanager in PATH for subsequent steps:
+          echo "PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:\$PATH" \
+            >> $GITHUB_ENV
 
-          # then install packages
+          # 4) Install platform‑tools, SDK, build‑tools & accept all licenses:
           yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" \
-            "platform-tools" \
-            "platforms;android-31" \
-            "build-tools;36.0.0"
-
+            "platform-tools" "platforms;android-31" "build-tools;36.0.0"
           yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --licenses
 
-
-      - name: Build APK with Buildozer
-        working-directory: src
+      - name: Build APK
+        working-directory: src      # adjust if your buildozer.spec is elsewhere
         run: buildozer --verbose android debug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: LifeTime-App-APK
-          path: src/bin/*.apk
+          path: src/bin/*.apk       # adjust if needed
