--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -34,7 +34,7 @@ jobs:
           pip install --upgrade pip
           pip install buildozer cython
 
-      - name: Install Android SDK CLI tools & accept licenses
+            - name: Install Android SDK CLI tools & accept licenses
         env:
           ANDROID_SDK_ROOT: $HOME/.buildozer/android/platform/android-sdk
         run: |
@@ -43,20 +43,23 @@ jobs:
           wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip \
             -O cmdline-tools.zip
 
-          # 2) Unzip into "cmdline-tools" and rename the nested folder to "latest":
+          # 2) Unzip into cmdline-tools/latest:
           unzip -q cmdline-tools.zip -d "$ANDROID_SDK_ROOT/cmdline-tools"
           mv "$ANDROID_SDK_ROOT/cmdline-tools/cmdline-tools" \
              "$ANDROID_SDK_ROOT/cmdline-tools/latest"
           rm cmdline-tools.zip
 
-          # 3) Expose sdkmanager in PATH for subsequent steps:
-          echo "PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:\$PATH" \
+          # 3) Export PATH so sdkmanager is immediately available:
+          export PATH="$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH"
+          # (also persist for later steps)
+          echo "PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH" \
             >> $GITHUB_ENV
 
-          # 4) Install platform‑tools, SDK, build‑tools & accept all licenses:
-          yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" \
-            "platform-tools" "platforms;android-31" "build-tools;36.0.0"
-          yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --licenses
+            # 4) Install platform‑tools, SDK, build‑tools & accept all licenses:
+            yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" \
+              "platform-tools" "platforms;android-31" "build-tools;36.0.0"
+            yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --licenses
+
 
       - name: Build APK
         working-directory: src      # adjust if your buildozer.spec is elsewhere
