--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,72 +1,51 @@
 name: Build Android APK
 
 on:
-  workflow_dispatch:
   push:
-    branches:
-      - main
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Set up Java 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      - name: Install system deps
+      - name: Install system dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y \
-            build-essential ccache git zip unzip wget openjdk-17-jdk \
-            libffi-dev libssl-dev libsqlite3-dev libjpeg-dev zlib1g-dev \
-            libgl1-mesa-dev libbz2-dev libgdbm-dev liblzma-dev \
-            libncurses-dev libncursesw5-dev libreadline-dev \
+            build-essential ccache git zip unzip wget \
+            libffi-dev libssl-dev libsqlite3-dev libjpeg-dev \
+            zlib1g-dev libgl1-mesa-dev libbz2-dev libgdbm-dev \
+            liblzma-dev libncurses-dev libreadline-dev \
             libtool automake autoconf m4 cmake
 
       - name: Install Buildozer & Cython
         run: |
           pip install --upgrade pip
-          pip install buildozer cython
+          pip install buildozer cython==0.29.33
 
-      - name: Install Android SDK CLI tools & accept licenses
-        env:
-          ANDROID_SDK_ROOT: $HOME/.buildozer/android/platform/android-sdk
+      - name: Build Android APK
+        working-directory: src
         run: |
-          # 1) Download Google's command‑line tools bundle:
-          mkdir -p "$ANDROID_SDK_ROOT/cmdline-tools"
-          wget https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip \
-            -O cmdline-tools.zip
+          # Pipe 'yes' to accept all SDK licenses automatically:
+          yes | buildozer -v android debug
 
-          # 2) Unzip into cmdline-tools/latest:
-          unzip -q cmdline-tools.zip -d "$ANDROID_SDK_ROOT/cmdline-tools"
-          mv "$ANDROID_SDK_ROOT/cmdline-tools/cmdline-tools" \
-             "$ANDROID_SDK_ROOT/cmdline-tools/latest"
-          rm cmdline-tools.zip
-
-          # 3) Export PATH so sdkmanager is immediately available:
-          export PATH="$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH"
-          # (also persist for later steps)
-          echo "PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH" \
-            >> $GITHUB_ENV
-
-            # 4) Install platform‑tools, SDK, build‑tools & accept all licenses:
-            yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" \
-              "platform-tools" "platforms;android-31" "build-tools;36.0.0"
-            yes | sdkmanager --sdk_root="$ANDROID_SDK_ROOT" --licenses
-
-
-      - name: Build APK
-        working-directory: src      # adjust if your buildozer.spec is elsewhere
-        run: buildozer --verbose android debug
-
-      - name: Upload APK
+      - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: LifeTime-App-APK
-          path: src/bin/*.apk       # adjust if needed
+          path: src/bin/*.apk
