--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -31,7 +31,8 @@ jobs:
             libffi-dev libssl-dev libsqlite3-dev libjpeg-dev \
             zlib1g-dev libgl1-mesa-dev libbz2-dev libgdbm-dev \
             liblzma-dev libncurses-dev libreadline-dev \
-            libtool automake autoconf m4 cmake
+            libtool automake autoconf m4 cmake \
+            pkg-config libtool-bin autoconf-archive
 
       - name: Install Buildozer & Cython
         run: |
