--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -9,8 +9,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      # Instruct python-for-android to skip rebuilding libffi from source:
+      # skip rebuilding libffi; use the distro’s libffi-dev instead
       P4A_REBUILD_LIBFFI: "0"
+      P4A_USE_SYSTEM_LIBFFI: "1"
 
     steps:
       - name: Checkout code
@@ -35,17 +36,18 @@ jobs:
             libffi-dev libssl-dev libsqlite3-dev libjpeg-dev \
             zlib1g-dev libgl1-mesa-dev libbz2-dev libgdbm-dev \
             liblzma-dev libncurses-dev libreadline-dev \
-            libtool automake autoconf m4 cmake \
-            pkg-config pkgconf autogen
+            libtool automake autoconf m4 cmake pkg-config
 
-      - name: Install Buildozer & Cython
+      - name: Install Buildozer, Cython & python-for-android
         run: |
           pip install --upgrade pip
-          pip install buildozer cython==0.29.33
+          # pin to a p4a version that bundles a working libffi recipe
+          pip install buildozer cython==0.29.33 python-for-android==2024.10.0
 
       - name: Build Android APK
         working-directory: src
         run: |
+          # auto‑accept all licenses and kick off build
           yes | buildozer -v android debug
 
       - name: Upload APK artifact
