--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -10,8 +10,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Set up Java 17
         uses: actions/setup-java@v3
@@ -42,10 +41,9 @@ jobs:
       - name: Build Android APK
         working-directory: src
         run: |
-          # make sure the spec has p4a.recipes_to_skip=libffi, and libffi in requirements
           yes | buildozer -v android debug
 
-      - name: Upload APK artifact
+      - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: LifeTime-App-APK
