--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -1,29 +1,21 @@
-name: Build Android APK
+name: Build Kivy APK
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    name: Build APK with Buildozer
+    runs-on: ubuntu-20.04
 
     steps:
-      - uses: actions/checkout@v3
+      - name: 📥 Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Set up Java 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
-
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install system dependencies
+      - name: 🛠️ Install system dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y \
@@ -31,24 +23,26 @@ jobs:
             libffi-dev libssl-dev libsqlite3-dev libjpeg-dev \
             zlib1g-dev libgl1-mesa-dev libbz2-dev libgdbm-dev \
             liblzma-dev libncurses-dev libreadline-dev \
-            libtool automake autoconf m4 cmake pkg-config autoconf-archive
+            libtool libltdl-dev automake autoconf m4 cmake \
+            pkg-config autoconf-archive openjdk-8-jdk python3-pip
 
-      - name: Install Buildozer, Cython & p4a (master)
+      - name: 🐍 Install Python dependencies
         run: |
-          pip install --upgrade pip
-          pip install \
-            buildozer==1.5.0 \
-            cython==0.29.33 \
-            "python-for-android@git+https://github.com/kivy/python-for-android.git@master"
+          python3 -m pip install --upgrade pip setuptools
+          pip install buildozer==1.5.0 Cython virtualenv
 
-      - name: Build Android APK
-        env:
-          P4A_SKIP_RECIPES: libffi
+      - name: 🔧 Initialize Buildozer (if not already)
         run: |
-          yes | buildozer -v android debug
+          if [ ! -f buildozer.spec ]; then
+            buildozer init
+          fi
 
-      - name: Upload APK artifact
-        uses: actions/upload-artifact@v4
+      - name: 🔨 Build APK
+        run: |
+          buildozer android debug
+
+      - name: 📦 Upload APK artifact
+        uses: actions/upload-artifact@v3
         with:
-          name: LifeTime-App-APK
+          name: my-kivy-app
           path: bin/*.apk
