It worked but hangs

--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -37,7 +37,7 @@ jobs:
             buildozer init
           fi
 
-      - name: 🔨 Build APK
+      - name: 🔨 Build APK - test
         run: |
           buildozer android debug
 
