--- a/.github/workflows/test-run.yml
+++ b/.github/workflows/test-run.yml
@@ -10,4 +10,4 @@ jobs:
 
     steps:
       - name: ✅ Echo test
-        run: echo "GitHub Runner is working!"
+        run: echo "GitHub Runner is working! nope"
