--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -26,7 +26,7 @@ jobs:
             bash -lc " \
               cd /app && \
               sed -i 's|^source.dir.*|source.dir = src|' buildozer.spec && \
-              buildozer --verbose android debug \
+              yes | buildozer --verbose android debug \
             "
 
       - name: 📦 Upload APK
