--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,3 +1,4 @@
+# .github/workflows/docker-kivy-build.yml
 name: Build Kivy APK (Docker)
 
 on:
@@ -23,9 +24,17 @@ jobs:
             -u 0 \
             -v "${{ github.workspace }}:/app" \
             bodolsog/py3-kivy-buildozer:latest \
-            bash -lc " \
+            bash -lc "\
               cd /app && \
+              # 1) Point at your src folder \
               sed -i 's|^source.dir.*|source.dir = src|' buildozer.spec && \
+              # 2) Keep only real app modules \
+              sed -i 's|^requirements.*|requirements = kivy,plyer,requests|' buildozer.spec && \
+              # 3) Fix permissions line (remove parentheses) \
+              sed -i 's|^android.permissions.*|android.permissions = INTERNET,WRITE_EXTERNAL_STORAGE,VIBRATE|' buildozer.spec && \
+              # 4) Skip libffi recipe \
+              sed -i '/^p4a.skip_recipes/q; $$ a p4a.skip_recipes = libffi\np4a.recipes_to_skip = libffi' buildozer.spec && \
+              # 5) Build non-interactively \
               yes | buildozer --verbose android debug \
             "
 
