--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,4 +1,3 @@
-# .github/workflows/docker-kivy-build.yml
 name: Build Kivy APK (Docker)
 
 on:
@@ -20,21 +19,15 @@ jobs:
 
       - name: 🐳 Build APK using Docker
         run: |
-          docker run --rm \
-            -u 0 \
+          docker run --rm -u 0 \
             -v "${{ github.workspace }}:/app" \
             bodolsog/py3-kivy-buildozer:latest \
-            bash -lc "\
+            /bin/bash -c " \
               cd /app && \
-              # 1) Point at your src folder \
               sed -i 's|^source.dir.*|source.dir = src|' buildozer.spec && \
-              # 2) Keep only real app modules \
               sed -i 's|^requirements.*|requirements = kivy,plyer,requests|' buildozer.spec && \
-              # 3) Fix permissions line (remove parentheses) \
               sed -i 's|^android.permissions.*|android.permissions = INTERNET,WRITE_EXTERNAL_STORAGE,VIBRATE|' buildozer.spec && \
-              # 4) Skip libffi recipe \
-              sed -i '/^p4a.skip_recipes/q; $$ a p4a.skip_recipes = libffi\np4a.recipes_to_skip = libffi' buildozer.spec && \
-              # 5) Build non-interactively \
+              sed -i '/^p4a.skip_recipes/q; \$ a p4a.skip_recipes = libffi\np4a.recipes_to_skip = libffi' buildozer.spec && \
               yes | buildozer --verbose android debug \
             "
 
